[package]
name = "ecos-ssc1"
version = "0.1.3"
edition = "2024"
description = "Rust SDK for ECOS StarrySky C1"  # todo: to support all. see include/README
authors = ["heke1228(Leo Cheng) <chengkelfanke@gmail.com>"]
repository = "https://github.com/ECOS-C1-SDK4Heke/ecos-ssc1.git"  # temp - 等待被收编...
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ecos-ssc1"
keywords = ["embedded", "riscv", "starrysky", "ecos"]
categories = ["embedded"]

include = [
    ".cargo/config.toml",
    "Cargo.toml",
    "build.rs",
    "README.md",
    "src/**/*.rs",
    "include/**/*",
    "macros/**/*",
]

build = "build.rs"

[features]
default = ["prelude-print", "prelude", "alloc", "panic"]
dev = ["macros/dev"]
all = ["alloc", "rand", "prelude", "prelude-print", "hashbrown", "log-colored"]

prelude = ["macros/prelude"]
prelude-print = ["macros/prelude-print"]

panic = []
panic-trace = ["panic"]

alloc = ["macros/alloc"]
alloc-auto-test = ["alloc", "rand"]
alloc-debug-trace = ["alloc"]

rand = ["dep:rand", "macros/rand"]

log = ["macros/log"]
log-colored = ["log"]

hashbrown = ["dep:hashbrown", "macros/hashbrown"]

[dependencies]
cty = "0.2"
volatile = "0.6"
macros = { package = "ecos-macros", path = "./macros" }
tock-registers = "0.10"
riscv = "0.16"
rand = { version = "0.9", default-features = false, features = ["small_rng"], optional = true }
hashbrown = { version = "0.16", optional = true  }

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
