[package]
name = "ecos-macros"
version = "0.1.1"
edition = "2024"
authors = ["heke1228 <chengkelfanke@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust SDK Macros for ECOS StarrySky C1"
documentation = "https://docs.rs/ecos-macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
