[package]
name = "ecos-macros"
version = "0.1.3"
edition = "2024"
authors = ["heke1228 <chengkelfanke@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust SDK Macros for ECOS StarrySky C1"
documentation = "https://docs.rs/ecos-macros"
repository = "https://github.com/ECOS-C1-SDK4Heke/ecos-ssc1.git"

[features]
default = ["prelude-print"]
all = ["alloc", "log", "prelude", "prelude-print", "hashbrown"]

log = []
dev = []
prelude = []
prelude-print = []
alloc = []
hashbrown = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
